# outspin

./: CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
outspin/: __init__.py  unix.py  windows.py
src/outspin/: __init__.py  constants.py  core.py  exceptions.py  unix.py  utils.py  windows.py
tests/: test_lib.py
