[tool.poetry]
name = "outspin"
version = "0.3.0"
description = "Conveniently read single char inputs in the console."
authors = ["trag1c <trag1cdev@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
mypy = "^1.9.0"
pytest = "^8.1.1"
interrogate = "^1.7.0"
coverage = "^7.4.4"

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "if sys\\.version_info.*:", "if sys\\.platform.*:"]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "E",
    "ERA",
    "F",
    "FBT",
    "I",
    "N",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TRY",
    "UP",
    "W",
]
ignore = [
    "ANN101",
    "ANN102",
    "ANN401",
    "RUF001",
    "RUF002",
    "RUF003",
    "TRY003",
]
exclude = ["tests"]

[tool.interrogate]
ignore-init-method = true
ignore-semiprivate = true
ignore-private = true
ignore-module = true
ignore-magic = true
ignore-nested-functions = true
ignore-overloaded-functions = true
verbose = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
