[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outspin"
version = "0.3.2"
description = "Conveniently read single char inputs in the console."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "trag1c", email = "trag1cdev@yahoo.com" }
]
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.4.4,<8",
    "interrogate~=1.7",
    "mypy~=1.9",
    "pytest>=8.1.1,<9",
    "ruff~=0.8.0",
]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "if sys\\.version_info.*:", "if sys\\.platform.*:"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM", "D", "FIX", "ANN401", "ISC001", "T201", "TD003", "PLR2004"]
exclude = ["tests"]

[tool.ruff.lint.per-file-ignores]
"src/outspin/*" = ["PT"]
"tests/*" = ["INP", "FBT", "PLC2701", "S101", "SLF001"]

[tool.interrogate]
exclude = ["tests"]
ignore-init-method = true
ignore-semiprivate = true
ignore-private = true
ignore-module = true
ignore-magic = true
ignore-nested-functions = true
ignore-overloaded-functions = true
verbose = 1
